--- a/CodingTrackerWPF/Views/CodingSessionsView.xaml
+++ b/CodingTrackerWPF/Views/CodingSessionsView.xaml
@@ -9,26 +9,90 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <materialDesign:DialogHost>
         <Grid >
-            <DataGrid x:Name="MainDataGrid"
-                  AutoGenerateColumns="False"
-                  CanUserAddRows="False"
-                  CanUserDeleteRows="False"
-                  IsReadOnly="True"
-                  SelectionMode="Single"
-                  SelectionUnit="FullRow"
-                  Background="{DynamicResource MaterialDesignPaper}"
-                  Foreground="{DynamicResource MaterialDesignBody}"
-                  GridLinesVisibility="All"
-                  HorizontalGridLinesBrush="Gray"
-                  VerticalGridLinesBrush="Gray"
-                  RowHeaderWidth="0"
-                  materialDesign:DataGridAssist.CellPadding="8"
-                  materialDesign:DataGridAssist.ColumnHeaderPadding="8"
-                  VerticalAlignment="Stretch"
-                  HorizontalAlignment="Stretch"
-                  Margin="10 0 10 10"
-                  FontSize="16"                      
-                  >
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+
+            <Grid Grid.Row="0"
+                  Margin="10 0 10 10">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+
+                    <Button Grid.Column="0"
+                            Name="AddRecordButton"
+                            Content="Add Record"
+                            Style="{StaticResource MaterialDesignFlatButton}"
+                            Margin="0,5,0,5"
+                            Command="{x:Static materialDesign:DialogHost.OpenDialogCommand}">
+                        <Button.CommandParameter>
+                            <Grid
+                                Margin="-1">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition
+                                        Height="*" />
+                                    <RowDefinition
+                                        Height="Auto" />
+                                </Grid.RowDefinitions>
+                                <StackPanel
+                                      Grid.Row="0"
+                                      Orientation="Horizontal"> 
+                                    <Calendar
+                                        x:Name="CombinedCalendar"
+                                        Margin="-1,-4,-1,0"
+                                        />
+                                    <materialDesign:Clock
+                                        x:Name="CombinedClock"
+                                        DisplayAutomation="CycleWithSeconds"
+                                        Is24Hours="True"
+                                        />
+                                </StackPanel>
+                                <StackPanel
+                                  Grid.Row="1"
+                                  Margin="8"
+                                  HorizontalAlignment="Right"
+                                  Orientation="Horizontal">
+                                    <Button
+                                        Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}"
+                                        CommandParameter="0"
+                                        Content="CANCEL"
+                                        Style="{StaticResource MaterialDesignFlatButton}" />
+                                    <Button
+                                        Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}"
+                                        CommandParameter="1"
+                                        Content="OK"
+                                        Style="{StaticResource MaterialDesignFlatButton}" />
+                                </StackPanel>
+                            </Grid>
+                        </Button.CommandParameter>
+                    </Button>
+                </Grid>
+            </Grid>
+
+            <DataGrid   Grid.Row="1"    
+                    x:Name="MainDataGrid"
+                    AutoGenerateColumns="False"
+                    CanUserAddRows="False"
+                    CanUserDeleteRows="False"
+                    IsReadOnly="True"
+                    SelectionMode="Single"
+                    SelectionUnit="FullRow"
+                    Background="{DynamicResource MaterialDesignPaper}"
+                    Foreground="{DynamicResource MaterialDesignBody}"
+                    GridLinesVisibility="All"
+                    HorizontalGridLinesBrush="Gray"
+                    VerticalGridLinesBrush="Gray"
+                    RowHeaderWidth="0"
+                    materialDesign:DataGridAssist.CellPadding="8"
+                    materialDesign:DataGridAssist.ColumnHeaderPadding="8"
+                    VerticalAlignment="Stretch"
+                    HorizontalAlignment="Stretch"
+                    Margin="10 0 10 10"
+                    FontSize="16"                      
+                      >
 
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="ID" 
